# soundsgood

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  agent.md  index.html  io.github.irving.soundsgood.yml  io.github.n1ghthill.soundsgood.yml  meson.build  meson_options.txt  soundsgood-flatpak.gpg  soundsgood.flatpakrepo  soundsgood.in
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml
data/: meson.build  soundsgood.gresource.xml
data/desktop/: io.github.irving.soundsgood.desktop.in  io.github.n1ghthill.soundsgood.desktop.in
data/metainfo/: io.github.irving.soundsgood.metainfo.xml.in  io.github.n1ghthill.soundsgood.metainfo.xml.in
data/schemas/: io.github.irving.soundsgood.gschema.xml  io.github.n1ghthill.soundsgood.gschema.xml
docs/: ARCHITECTURE.md  BUILD_WEEK.md  DEMO_SCRIPT.md  FLATPAK.md  MANUAL_TESTS.md  SUBMISSION.md
docs/assets/: README.md
po/: meson.build
repo/: config  summary  summary.idx  summary.idx.sig  summary.sig
repo/delta-indexes/6v/: PEkYY5kaUcIXl9ZQ1FndaaxbzeRkmaWoNGwIVkRlY.index
repo/delta-indexes/jg/: BACLG9X9TP+Z66hu5m6MS67QldCodoIe0LgH+hY_I.index
repo/deltas/6v/PEkYY5kaUcIXl9ZQ1FndaaxbzeRkmaWoNGwIVkRlY/: 0  superblock
repo/deltas/jg/BACLG9X9TP+Z66hu5m6MS67QldCodoIe0LgH+hY_I/: 0  superblock
repo/refs/heads/app/io.github.n1ghthill.soundsgood/x86_64/: stable
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
scripts/: create-demo-library.sh  generate-assets.sh  publish-flatpak-repo.sh
soundsgood/: __init__.py  application.py  background.py  diagnostics.py  library.py  models.py  mpris.py  player.py  playlists.py  statusnotifier.py  style.css  window.py
soundsgood/catalog/: __init__.py  cache.py  playlist_storage.py  playlists.py  search.py
soundsgood/views/: albumsview.py  artistsview.py  playlistsview.py  songsview.py
soundsgood/widgets/: __init__.py  aboutdialog.py  detailrow.py  playertoolbar.py  playlistchooser.py  playlistcontextmenu.py  playlistrows.py  preferencesdialog.py  searchview.py  songrow.py
tests/: test_application.py  test_background.py  test_library.py  test_mpris.py  test_player.py  test_playlist_context_menu.py  test_playlists.py  test_source_integrity.py  test_statusnotifier.py  test_ui.py
